Blog oluşturma sayfaları güncellenedi

--- a/BlogBASC/BlogBASC/Views/Home/Blog.cshtml
+++ b/BlogBASC/BlogBASC/Views/Home/Blog.cshtml
@@ -62,11 +62,9 @@
 
                     <h2 class="h01"><a href="blog-single.html">@blog.Baslik</a></h2>
                     <p>
-                        @blog.Icerik
-                    </p>
-                    <p class="lead">
                         @blog.Aciklama
                     </p>
+                    
 
                     <div class="blog-cat">
                         <a href="blog.html">Photogarphy</a>
@@ -101,10 +99,7 @@
     <div class="row">
         <div class="col-full">
 
-            <div class="footer-logo">
-                <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
-            </div>
-
+            <
             <ul class="footer-social">
                 <li>
                     <a href="#0">
@@ -140,4 +135,4 @@
 
         </div>
     </div>
-
+    </footer>
