--- a/BlogBASC/BlogBASC/Content/css/main.css
+++ b/BlogBASC/BlogBASC/Content/css/main.css
@@ -291,6 +291,8 @@ pre {
     overflow-x: auto;
 }
 
+
+
 code {
     font-size: 1.4rem;
     margin: 0 .2rem;
@@ -3051,9 +3053,9 @@ html.no-csstransitions .home-content__main {
 
 .s-contact {
     background-color: #151515;
-    background-image: url("../images/contact-bg.jpg");
-    background-repeat: no-repeat;
-    background-position: center, center;
+    background-image: url("/Content/images/3.jpg");
+    background-size:cover;
+    background-position: center;
     padding-top: 13.2rem;
     padding-bottom: 12rem;
     color: rgba(255, 255, 255, 0.5);
