--- a/BlogBASC/BlogBASC/Views/Category/Create.cshtml
+++ b/BlogBASC/BlogBASC/Views/Category/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Create Category</h2>
 
 
 @using (Html.BeginForm()) 
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.KategoriAdi, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.KategoriAdi, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.KategoriAdi, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.KategoriAdi, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -33,7 +33,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary btnclr" })
 </div>
 
 @section Scripts {
