--- a/BlogBASC/BlogBASC/Views/Home/Blog.cshtml
+++ b/BlogBASC/BlogBASC/Views/Home/Blog.cshtml
@@ -4,47 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<section class="page-header page-hero" style="background-image:url(/Content/images/5.jpg)">
+@{Html.RenderAction("CategoryMenu", "Category");}
 
-    <div class="row page-header__content">
-        <article class="col-full">
+<!-- blog== -->
 
-
-
-            <h1 class="page-header__title">
-
-                CATEGORIES
-
-            </h1>
-            <br />
-            <div class="row">
-                <div class="col-lg-4 cat">
-                    <ul>
-                        <li>  <a href="#0" class="btn btn--stroke page-header__btn">Photography</a></li>
-                        <li>  <a href="#0" class="btn btn--stroke page-header__btn">Healthy-Living</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 cat">
-                    <ul>
-
-                        <li>  <a href="#0" class="btn btn--stroke page-header__btn">Travel</a></li>
-                        <li>  <a href="#0" class="btn btn--stroke page-header__btn">Cinema</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 cat">
-                    <ul>
-                        <li>  <a href="#0" class="btn btn--stroke page-header__btn">Books</a></li>
-                        <li>  <a href="#0" class="btn btn--stroke page-header__btn">Science</a></li>
-                    </ul>
-                </div>
-
-            </div>
-        </article>
-    </div>
-
-</section> <!-- end page-header -->
-<!-- blog
-================================================== -->
 <section class="blog-content-wrap">
 
     <div class="row blog-content">
@@ -52,25 +15,25 @@
 
             <div class="blog-list block-1-2 block-tab-full">
 
-                @foreach(var blog in Model)
+                @foreach (var blog in Model)
                 {
-                <article class="col-block">
+                    <article class="col-block">
 
-                    <div class="blog-date">
-                        <a href="blog-single.html">@blog.EklenmeTarihi</a>
-                    </div>
+                        <div class="blog-date">
+                            <a href="blog-single.html">@blog.EklenmeTarihi</a>
+                        </div>
 
-                    <h2 class="h01"><a href="blog-single.html">@blog.Baslik</a></h2>
-                    <p>
-                        @blog.Aciklama
-                    </p>
+                        <h2 class="h01"><a href="blog-single.html">@blog.Baslik</a></h2>
+                        <p>
+                            @blog.Aciklama
+                        </p>
 
 
-                    <div class="blog-cat">
-                        <a href="blog.html">Photogarphy</a>
-                    </div>
-                    @Html.ActionLink("Read More...", "Details", "Blog", new { id = @blog.Id }, new { @class = "btn btn-primary" })
-                </article>
+                        <div class="blog-cat">
+                            <a href="blog.html">Photogarphy</a>
+                        </div>
+                        @Html.ActionLink("Read More...", "Details", "Blog", new { id = @blog.Id }, new { @class = "btn btn-primary" })
+                    </article>
                 }
 
 
@@ -135,4 +98,4 @@
 
         </div>
     </div>
-    </footer>
+</footer>
