--- a/BlogBASC/BlogBASC/Views/Category/Delete.cshtml
+++ b/BlogBASC/BlogBASC/Views/Category/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Delete</h2>
@@ -26,7 +26,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-primary btnclr" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
