--- a/BlogBASC/BlogBASC/Views/Account/Register.cshtml
+++ b/BlogBASC/BlogBASC/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model BlogBASC.Models.RegisterViewModel
 @{
     ViewBag.Title = "Kaydol";
+    Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -31,7 +32,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Kaydol" />
+            <input type="submit" class="btn btn-primary btnclr" value="Kaydol" />
         </div>
     </div>
 }
