--- a/BlogBASC/BlogBASC/Views/Blog/Create.cshtml
+++ b/BlogBASC/BlogBASC/Views/Blog/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Create BlogPost</h2>
