--- a/BlogBASC/BlogBASC/Views/Blog/Delete.cshtml
+++ b/BlogBASC/BlogBASC/Views/Blog/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Delete</h2>
