--- a/BlogBASC/BlogBASC/Views/Blog/Edit.cshtml
+++ b/BlogBASC/BlogBASC/Views/Blog/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Edit Blog</h2>
