--- a/BlogBASC/BlogBASC/Views/Blog/Index.cshtml
+++ b/BlogBASC/BlogBASC/Views/Blog/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Blog Listesi</h2>
