--- a/BlogBASC/BlogBASC/Views/Shared/_Layout1.cshtml
+++ b/BlogBASC/BlogBASC/Views/Shared/_Layout1.cshtml
@@ -4,10 +4,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - ASP.NET Uygulamam</title>
+    <title>@ViewBag.Title </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="~/Content/Site.css">
+    <link href="~/Content/css/simple-sidebar.css" rel="stylesheet">
 
 
 </head>
