--- a/BlogBASC/BlogBASC/Views/Home/Index.cshtml
+++ b/BlogBASC/BlogBASC/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <!-- home
   ================================================== -->
-<div id="home" class="s-home page-hero target-section" data-parallax="scroll" >
+<div id="home" class="s-home page-hero target-section" data-parallax="scroll"  >
    
     <div class="overlay"></div>
     <div class="shadow-overlay"></div>
@@ -21,16 +21,16 @@
             <h3>Hello There</h3>
 
             <h1>
-                Welcome to BASC Blog <br>
-                Expand your <br> reading & writing. <br>
+                Welcome to <br> BASC Blog <br>
+                Expand your reading.  <br>
                 Expand your mind.
             </h1>
 
             <div class="home-content__buttons">
-                <a id="registerLink" href="/Account/Login" class="smoothscroll btn btn--stroke">
+                <a id="registerLink" href="/Account/Login" class="btn btn--stroke">
                     SIGN IN
                 </a>
-                <a id="loginLink" href="/Account/Register" class="smoothscroll btn btn--stroke">
+                <a id="loginLink" href="/Account/Register" class="btn btn--stroke">
                     REGISTER
                 </a>
 
@@ -45,8 +45,8 @@
         </div>
 
     </div> <!-- end home-content -->
-
-    <ul class="home-social">
+    
+    <ul class="home-social" style="color:snow;">
         <li>
             <a href="#"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
         </li>
