--- a/BlogBASC/BlogBASC/Views/Shared/_LoginPartial.cshtml
+++ b/BlogBASC/BlogBASC/Views/Shared/_LoginPartial.cshtml
@@ -1,16 +1,24 @@
 ﻿@using Microsoft.AspNet.Identity
+
 @if (Request.IsAuthenticated)
 {
-   
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    {
+        @Html.AntiForgeryToken()
+
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                @Html.ActionLink("Merhaba " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            </li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Oturumu kapat</a></li>
+        </ul>
+    }
 }
 else
 {
-    <a id="registerLink" href="/Account/Login" class="smoothscroll btn btn--stroke">
-        SIGN IN
-    </a>
-    <a id="loginLink" href="/Account/Register" class="smoothscroll btn btn--stroke">
-        REGISTER
-    </a>
-   
-
+    
+        <li>@Html.ActionLink("Kaydol", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+        <li>@Html.ActionLink("Oturum aç", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+    
 }
+
