--- a/BlogBASC/BlogBASC/Views/Shared/_LoginPartial.cshtml
+++ b/BlogBASC/BlogBASC/Views/Shared/_LoginPartial.cshtml
@@ -8,17 +8,16 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink("Merhaba " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Oturumu kapat</a></li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">LogOff</a></li>
         </ul>
     }
 }
 else
 {
     
-        <li>@Html.ActionLink("Kaydol", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Oturum aç", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        
     
 }
 
